@@ -317,8 +317,8 @@ extern int _rl_pushed_input_available (void);
 extern int _rl_timeout_init (void);
 extern int _rl_timeout_handle_sigalrm (void);
 /* begin_clink_change */
-//#if defined (_POSIXSELECT_H_) && !defined (__MINGW32__)
-#if defined (_POSIXSELECT_H_) && (defined (HAVE_PSELECT) || defined (HAVE_SELECT))
+//#if defined (_POSIXSELECT_H_) && !defined (__MINGW32__) && (defined (HAVE_SELECT) || defined (HAVE_PSELECT))
+#if defined (_POSIXSELECT_H_) && (defined (HAVE_SELECT) || defined (HAVE_PSELECT))
 /* end_clink_change */
 /* use as a sentinel for fd_set, struct timeval,  and sigset_t definitions */
 extern int _rl_timeout_select (int, fd_set *, fd_set *, fd_set *, const struct timeval *, const sigset_t *);
